snippets/compact-memberlist.css
.content_f75fb0 > :is(.container_c8ffbb, .membersWrap_c8ffbb) {
    width: 64px !important;
    min-width: 64px;
    justify-content: flex-start;
}

.content_f75fb0 > :is(.container_c8ffbb, .membersWrap_c8ffbb) > * {
    width: 265px;
    overflow: visible;
    transition: translate 0.25s ease-out;
}

.content_f75fb0 > :is(.container_c8ffbb, .membersWrap_c8ffbb) > :hover {
    translate: -201px 0;
}

.content_f75fb0 > .membersWrap_c8ffbb > :not(:hover) {
    padding-left: 1px;
}

/* group separator */

.membersGroup_c8ffbb {
    transition: color 0.25s ease-out;
}

.membersGroup_c8ffbb::before {
    content: "";
    position: absolute;
    width: 24px;
    height: 2px;
    left: 20px;
    margin-top: 10px;
    background-color: var(--channels-default);
    transition: background-color 0.25s ease-out;
}

.content_f75fb0 > :is(.container_c8ffbb, .membersWrap_c8ffbb) > :not(:hover) .membersGroup_c8ffbb {
    color: transparent;
}

.content_f75fb0 > :is(.container_c8ffbb, .membersWrap_c8ffbb) > :hover .membersGroup_c8ffbb::Before {
    background-color: transparent;
}

.membersGroup_c8ffbb .roleIcon_ee71ee {
    translate: 8px -8px;
    transition: translate 0.25s ease-out;
}

.content_f75fb0 > :is(.container_c8ffbb, .membersWrap_c8ffbb) > :hover .membersGroup_c8ffbb .roleIcon_ee71ee {
    translate: 0 0;
}

/* member */

.member__5d473 .memberInner__5d473 > :not(.avatar__91a9d) {
    translate: 8px 0;
    transition: translate 0.25s ease-out;
}

.content_f75fb0 > :is(.container_c8ffbb, .membersWrap_c8ffbb) > :hover .member__5d473 .memberInner__5d473 > :not(.avatar__91a9d) {
    translate: 0 0;
}

.member__5d473 .container__4bbc6 {
    width: 46px;
}

.content_f75fb0 > :is(.container_c8ffbb, .membersWrap_c8ffbb) > :hover .member__5d473 .container__4bbc6 {
    width: 100%;
}

/* private thread instructions */

.instructions__7641b, .private__7641b {
    transition: color 0.25s ease-out;
}

.private__7641b > svg {
    color: var(--text-default);
    transition: translate 0.25s ease-out;
    translate: 9px 0;
}

.content_f75fb0 > .membersWrap_c8ffbb > :not(:hover) .divider__7641b {
    width: 30px;
}

.content_f75fb0 > .membersWrap_c8ffbb > :not(:hover) :is(.instructions__7641b, .private__7641b) {
    color: transparent !important;
}

.content_f75fb0 > .membersWrap_c8ffbb > :hover .private__7641b > svg {
    translate: 0 0;
}

